# sdk

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AIRT_API_REFERENCE_UPDATED.md  AIRT_PRODUCT_SPEC.md  AIRT_TECHNICAL_DESIGN_UPDATED.md  AIRT_USER_STORIES.md  AI_RED_TEAMING_API_REFERENCE.md  AI_RED_TEAMING_PRD.md  AI_RED_TEAMING_TECHNICAL_DESIGN.md  CLAUDE.md  README.md  agent.py  debug.html  py2mdx.py  pyproject.toml  test.py  test_training_e2e.py  test_training_integration.py
.github/: labeler.yaml  labels.yaml  renovate.json5
.github/workflows/: ci.yaml  docs-update.yaml  docs.yaml  meta-labeler.yaml  meta-sync-labels.yaml  pre-commit.yaml  publish.yaml  renovate.yaml  rigging_pr_description.yaml  semantic-release.yaml  semgrep.yaml  template-sync.yaml  test.yaml  tests.yaml
.hooks/: check_pinned_hash_dependencies.py  generate_docs.py  generate_pr_description.py  refresh_dependencies.sh  typing_and_linting.sh
data/: adversarial_benchmark_subset.csv
docs/: config.mdx  docs.json  examples.mdx  install.mdx  intro.mdx  style.css
docs/agents/: agent-lifecycle.mdx  agents.mdx  available-tools.mdx  building-an-agent.mdx  cli.mdx  events.mdx  hooks.mdx  prebuilt-agents.mdx  reactions.mdx  state.mdx  stops.mdx  tools.mdx
docs/airt/: concepts.mdx  overview.mdx  quick-start.mdx
docs/dreadnode/: api.mdx  artifact.mdx  constants.mdx  context.mdx  exporters.mdx  integrations.mdx  main.mdx  metric.mdx  object.mdx  score.mdx  serialization.mdx  task.mdx  tracing.mdx  types.mdx  util.mdx  version.mdx
docs/examples/: agent-examples.mdx  dangerous-capabilities.mdx  dotnet-reversing.mdx  overview.mdx  python-agent.mdx  saas-scanning.mdx  sast-scanning.mdx  sensitive-data.mdx
docs/how-to/: airtbench-agent.mdx  solve-bear4.mdx  solve-granny.mdx  write-a-ctf-agent.mdx  write-a-dotnet-reversing-agent.mdx  write-an-eval.mdx
docs/mdx/: dreadnode.mdx  index.mdx
docs/migrations/: v1.mdx
docs/sdk/: agent.mdx  agent_tools.mdx  airt.mdx  api.mdx  artifact.mdx  data_types.mdx  docs.json  eval.mdx  integrations.mdx  main.mdx  metric.mdx  optimization.mdx  scorers.mdx  serialization.mdx  task.mdx  transforms.mdx
docs/usage/: agents.mdx  cli.mdx  config.mdx  data-tracking.mdx  evals.mdx  export.mdx  meta.mdx  metrics.mdx  model-training.mdx  projects.mdx  rich-objects.mdx  runs.mdx  scorers.mdx  studies.mdx  tasks.mdx  transforms.mdx
dreadnode/: __init__.py  __main__.py  artifact.py  common_types.py  configurable.py  constants.py  context.py  convert.py  credential_manager.py  dataset.py  discovery.py  error.py  exporter.py  exporters.py  format.py  logging.py  logging_.py  lookup.py  main.py  metric.py  object.py  process.md  run.py  score.py  serialization.py  storage.py  task.py  tracing.py  types.py  user_config.py  util.py
dreadnode/agent/: __init__.py  agent.py  conditions.py  configurable.py  console.py  context.py  dispatcher.py  error.py  events.py  format.py  handler.py  hooks.py  judge.py  memory.py  parsing.py  reactions.py  result.py  runnable.py  state.py  stop.py  thread.py  trajectory.py  types.py
dreadnode/agents/: __init__.py  loader.py  local.py
dreadnode/airgap/: __init__.py  ecr_helper.py  health.py  installer.py  validator.py  zarf_wrapper.py
dreadnode/airt/: __init__.py  attack.py  eval.py  generative.py  target.py
dreadnode/api/: __init__.py  client.py  models.py  strikes.py  util.py
dreadnode/artifact/: __init__.py  credential_manager.py  merger.py  storage.py  tree_builder.py
dreadnode/cli/: api.py  config.py  discoverable.py  docker.py  github.py  main.py  shared.py
dreadnode/core/: __init__.py  conditions.py  discovery.py  environment.py  exceptions.py  execution.py  format.py  hook.py  judge.py  load.py  log.py  metric.py  object.py  scorer.py  search.py  serialization.py  settings.py  stopping.py  task.py  transforms.py  util.py
dreadnode/data_types/: __init__.py  audio.py  base.py  image.py  message.py  table.py  video.py
dreadnode/datasets/: __init__.py  dataset.py  hf.py  local.py
dreadnode/environments/: docker.py  k8.py  kernel.py  sandbox.py
dreadnode/eval/: __init__.py  console.py  dataset.py  eval.py  evals.py  events.py  format.py  result.py  sample.py
dreadnode/evals/: __init__.py  console.py  evals.py  evaluation.py  events.py  result.py
dreadnode/evaluations/: SKILL.md  __init__.py
dreadnode/ext/: fsspec.py
dreadnode/hooks/: backoff.py  commands.py  metrics.py  retry_with_feedback.py  summarize.py
dreadnode/integrations/: __init__.py  transformers.py
dreadnode/lazy/: core.py  scorers.py
dreadnode/meta/: __init__.py  config.py  context.py  hydrate.py  introspect.py  types.py
dreadnode/models/: __init__.py  hf.py  local.py  model.py
dreadnode/optimization/: __init__.py  blueprints.py  collectors.py  console.py  events.py  format.py  result.py  sampling.py  search.py  stop.py  study.py  trial.py
examples/: agent.py  agent_evaluation.py  artifacts.py  distributed_run.py  evaluation.py  full_workflow.py  log_artifact.ipynb  model_training.ipynb  multi-agent.ipynb  packages.py  quickstart.py  study.py  train.py  train_gsm8k_async.py  train_gsm8k_ray_grpo.py  train_math_agent.py  utils.py
scripts/: generate_readme.py  make_docs.py
templates/: README.md.j2
tests/: conftest.py  test_agent.py  test_agent_lifecycle.py  test_agent_loader.py  test_api.py  test_api_client.py  test_artifact.py  test_bus_and_actor.py  test_config.py  test_dataset_hf.py  test_decorators.py  test_evaluation.py  test_generators.py  test_interaction.py  test_llm_judge_rubrics.py  test_logging.py  test_meta.py  test_metric.py  test_model_hf.py  test_notification_hook.py  test_object.py  test_optimization.py  test_otel_exporter.py  test_pii_advanced_scorers.py  test_pii_extraction_transforms.py  test_preserve_tool_pairs.py  test_ralph_hook.py  test_ray_training.py  test_scorer.py  test_scorer_hook.py  test_serialization.py  test_settings.py  test_stylistic_transforms.py  test_task.py  test_task_output_linking.py  test_tool_invocation.py  test_tools.py  test_tracing.py  test_tracing_spans.py  test_training.py  (+2 more)
(+618 files in other folders)
